Changed file names, fixed how text appears on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,20 +6,9 @@
   --prussian-blue: #061a40ff;
 }
 
-@keyframes slideContentFromBottom {
-  from {
-    transform: translateY(100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
 body {
   background-color: var(--prussian-blue);
-  margin: 1rem 5rem;
+  margin: 1vw 5vw;
   font-family: 'Roboto', sans-serif;
   max-width: 100rem;
   justify-self: center;
@@ -29,18 +18,17 @@ body {
 }
 
 .pi {
-  margin: 0 0.5rem;
+  margin: 0 0.5vw;
 }
 
 .table-header {
-  font-size: 1.5rem;
+  font-size: 1.5vw;
   font-weight: bold;
 }
 
 .table .p-datatable-thead > tr > th,
 .table .p-datatable-tbody > tr > td {
   padding: 1.5rem !important;
-  font-size: 1.1rem;
   color: white;
 }
 
@@ -52,37 +40,6 @@ a {
   background: var(--deep-space-blue);
   padding: 1rem;
   margin: 1rem;
-}
-
-#title-card {
-  animation: slideContentFromBottom 1s ease-out;
-  animation-fill-mode: forwards;
-  opacity: 0;
-  animation-delay: 0.5s;
-}
-#introduction {
-  animation: slideContentFromBottom 1s ease-out;
-  animation-fill-mode: forwards;
-  animation-delay: 1s;
-  opacity: 0;
-}
-#personalProjects {
-  animation: slideContentFromBottom 1s ease-out;
-  animation-fill-mode: forwards;
-  animation-delay: 1.5s;
-  opacity: 0;
-}
-#workProjects {
-  animation: slideContentFromBottom 1s ease-out;
-  animation-fill-mode: forwards;
-  animation-delay: 2s;
-  opacity: 0;
-}
-#experience {
-  animation: slideContentFromBottom 1s ease-out;
-  animation-fill-mode: forwards;
-  animation-delay: 2.5s;
-  opacity: 0;
 }
 
 @media (max-width: 768px) {
@@ -98,6 +55,6 @@ a {
   .table .p-datatable-thead > tr > th,
   .table .p-datatable-tbody > tr > td {
     padding: 0.75rem !important;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
 }
